Download sources to get correct cache key for Zomboid

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,9 @@ jobs:
           - ubuntu-latest
           - macos-latest
     steps:
+      - name: Fetch Sources
+        uses: actions/checkout@v2.4.0
+
       - name: Setup steamcmd
         uses: CyberAndrii/setup-steamcmd@v1
 
@@ -67,7 +70,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{ runner.workspace }}/zomboid
-          key: pz-ubuntu-latest-${{ hashFiles('**/current.pzversion') }}
+          key: pz-ubuntu-latest-${{ hashFiles('.github/current.pzversion') }}
 
       - name: Install Project Zomboid
         run: |
@@ -126,7 +129,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{ runner.workspace }}/zomboid
-          key: pz-${{ matrix.os }}-${{ hashFiles('**/current.pzversion') }}
+          key: pz-${{ matrix.os }}-${{ hashFiles('.github/current.pzversion') }}
 
       - name: Install Project Zomboid
         run: |
@@ -193,7 +196,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{ runner.workspace }}/zomboid
-          key: pz-ubuntu-latest-${{ hashFiles('**/current.pzversion') }}
+          key: pz-ubuntu-latest-${{ hashFiles('.github/current.pzversion') }}
 
       - name: Install Project Zomboid
         run: |
