--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,6 @@
 kotlin.code.style=official
+
+projectVersion=0.1.0
+
+# Set to own Zomboid installation.
 zomboidPath=C:/Program Files (x86)/Steam/steamapps/common/ProjectZomboid
