Update to latest version of Zomboid Gradle plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,5 @@
 kotlin.code.style=official
-
-projectVersion=0.1.0
-
+version=0.1.0
+description=Project Zomboid extension framework
 # Set to own Zomboid installation.
-zomboidPath=C:/Program Files (x86)/Steam/steamapps/common/ProjectZomboid
+zomboidPath=C:/Program Files (x86)/Steam/steamapps/common/Project Zomboid Dedicated Server
