--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -188,7 +188,7 @@ jobs:
         id: properties
         shell: bash
         run: |
-          PROPERTIES="$(./gradlew properties --stacktrace --console=plain -q)"
+          PROPERTIES="$(./gradlew properties -PzomboidPath=${{ runner.workspace }}/zomboid --console=plain -q)"
           NAME="$(echo "$PROPERTIES" | grep "^name:" | cut -f2- -d ' ')"
           VERSION="$(echo "$PROPERTIES" | grep "^version:" | cut -f2- -d ' ')"
           CHANGELOG="$(./gradlew getChangelog --unreleased --no-header --console=plain -q)"
