--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,10 +95,10 @@ jobs:
       - name: Override Gradle properties
         run: |
           sed -i.bak '/zomboidPath=/d' gradle.properties
-          echo "zomboidPath=./zomboid/projectzomboid" >> gradle.properties
+          echo "zomboidPath=./zomboid" >> gradle.properties
 
       - name: Qodana - Code Inspection
-        uses: JetBrains/qodana-action@v4.2.1
+        uses: JetBrains/qodana-action@v2022.3.0
         env:
           GRADLE_OPTS: "-PzomboidPath=zomboid"
 
@@ -224,8 +224,8 @@ jobs:
           echo "::set-output name=artifact::$ARTIFACT"
           echo "::set-output name=changelog::$CHANGELOG"
 
-      - name: Build
-        run: ./gradlew build -PzomboidPath=${{ runner.workspace }}/zomboid
+      - name: Build Distribution
+        run: ./gradlew build distZip -PzomboidPath=${{ runner.workspace }}/zomboid
 
       - name: Upload distribution
         uses: actions/upload-artifact@v3
